--- a/jira-tempo-total-time.html
+++ b/jira-tempo-total-time.html
@@ -12,7 +12,7 @@ var jiraStartDate = '2019-11-01'; // YYYY-MM-DD
 var now = new Date();
 var year = now.getYear() + 1900;
 var month = now.getMonth() + 1;
-var day = now.getDay();
+var day = now.getDate();
 if (month < 10) month = '0' + month;
 if (day < 10) day = '0' + day;
 var today = year + '-' + month + '-' + day;
